projects/lungmen.akn/src/apps/homebox/security/network-policy.allow-homebox-from-cilium-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows the Cilium Gateway API to route traffic to the homebox application.
      Traffic proxied by Cilium Gateway API carries the reserved:ingress identity,
      as per https://docs.cilium.io/en/latest/security/policy/layer3/#entities-based
  name: allow-homebox-from-cilium-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homebox
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "7745"
              protocol: TCP
