projects/lungmen.akn/src/apps/homebox/security/network-policy.allow-homebox-to-databases.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Homebox to access the mutualized PostgreSQL database.
  name: allow-homebox-to-databases
  namespace: homebox
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homebox
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: databases
            cnpg.io/cluster: apps-20260329
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
