projects/lungmen.akn/src/apps/homebox/security/network-policy.allow-homebox-to-sso.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Homebox to connect to Pocket-Id for OIDC authentication.
  name: allow-homebox-to-sso
  namespace: homebox
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homebox
  egress:
    - toFQDNs:
        - matchName: auth.chezmoi.sh
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
