projects/lungmen.akn/src/apps/homebox/security/network-policy.default-hardened.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Default hardened network policy for the homebox namespace that implements a secure baseline
      by denying all traffic except explicitly allowed connections. Permits intra-namespace
      communication and DNS resolution to kube-system, while blocking all other traffic by default.
  name: default-hardened
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: homebox
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"

    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: homebox
